--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Afrimentary</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Afrimentary - Transforming the landscape of academic quantitative surveys and survey experiments in Africa.</title>
+    <meta name="description" content="Afrimentary is an online platform is dedicated to revolutionizing the connection between researchers and Africa- based respondents, fostering a collaborative environment that drives valuable research and insights.">
+    <meta name="keywords" content="Afrimentary, African survey experiments, African academic quantitative surveys, education surveys, community, Africa" />
+    <link rel="canonical" href="https://www.afrimentary.com/">
   </head>
   <body>
     <div id="root"></div>
