Add dynamic document titles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Afrimentary is an online platform is dedicated to revolutionizing the connection between researchers and Africa-based respondents, fostering a collaborative environment that drives valuable research and insights.">
     <meta name="keywords" content="Afrimentary, African survey experiments, African academic quantitative surveys, education surveys, community, Africa" />
     <link rel="canonical" href="https://www.afrimentary.com/">
-    <link rel="shortcut icon" href="/logo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="/logo.jpeg" type="image/x-jpg">
   </head>
   <body>
     <div id="root"></div>
